# warehouse

./: .gitignore  mediseawall_snapshot_procs.sql
screenshot/: abonvi.rar
warehouse/: async_loop_singleton.py  async_msssql_query.py  async_runner.py  baseline_Mediseawall.json  dashboard_page.py  dataqueryframe.py  db_async_singleton.py  gestione_aree_frame_async.py  gestione_pickinglist.py  json_sidebar.py  layout_window.py  main.py  paged_async_data_frame.py  pickinglist.sql  prenota_sprenota_sql.py  pyproject.toml  readme.txt  reset_corsie.py  script.sql  search_pallets.py  sidebar_config.json  sql.txt  view_celle_multiple.py  warehouse_sp_python.py
warehouse/backups/: autosave.tcl.bak1  autosave.tcl.bak2
